Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21884

MariaDB with Spider crashes on a query

    XMLWordPrintable

Details

    Description

      I have a set up with a Spider node and three backend nodes with InnoDB. When I run the following query:

      SELECT * FROM ARCHIVE a
      JOIN POSITIONS p ON a.ID_OBJ = p.ID_OBJ AND a.TIMEUNIT = p.TIMEUNIT
      WHERE a.timeevent = '2018-01-10 12:00:05'

      the spider crashes with the log below. I am not able to isolate the data, as I have quite a big dataset in the backends.

      Version: '10.3.22-MariaDB-1:10.3.22+maria~bionic' socket: '/var/run/mysqld/mysqld.sock' port: 3306 mariadb.org binary distribution
      200306 12:41:00 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.

      To report this bug, see https://mariadb.com/kb/en/reporting-bugs

      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.

      Server version: 10.3.22-MariaDB-1:10.3.22+maria~bionic
      key_buffer_size=134217728
      read_buffer_size=2097152
      max_used_connections=1
      max_threads=102
      thread_count=30
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 760034 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.

      Thread pointer: 0x7ffaf0000c08
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7ffbb81d9dd8 thread_stack 0x49000
      mysqld(my_print_stacktrace+0x2e)[0x55d5f1df52ee]
      mysqld(handle_fatal_signal+0x515)[0x55d5f188d005]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x12890)[0x7ffbc84cb890]
      /usr/lib/mysql/plugin/ha_spider.so(_Z31spider_db_fetch_minimum_columnsP9ha_spiderPhP5TABLEP21st_spider_result_list+0x5e)[0x7ffbba3768ae]
      /usr/lib/mysql/plugin/ha_spider.so(_Z15spider_db_fetchPhP9ha_spiderP5TABLE+0x8b)[0x7ffbba37947b]
      /usr/lib/mysql/plugin/ha_spider.so(_ZN9ha_spider10index_nextEPh+0xb1)[0x7ffbba3c7b11]
      mysqld(_ZN7handler17ha_index_read_mapEPhPKhm16ha_rkey_function+0x118)[0x55d5f1892728]
      mysqld(+0xc9dced)[0x55d5f1dc0ced]
      mysqld(_ZN7handler17ha_index_read_mapEPhPKhm16ha_rkey_function+0x118)[0x55d5f1892728]
      mysqld(+0x5cef18)[0x55d5f16f1f18]
      mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x151)[0x55d5f16e4571]
      mysqld(+0x5b6088)[0x55d5f16d9088]
      mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x1e0)[0x55d5f16e4600]
      mysqld(_ZN4JOIN10exec_innerEv+0x946)[0x55d5f17045c6]
      mysqld(_ZN4JOIN4execEv+0x33)[0x55d5f1704913]
      mysqld(_Z12mysql_selectP3THDP10TABLE_LISTjR4ListI4ItemEPS4_jP8st_orderS9_S7_S9_yP13select_resultP18st_select_lex_unitP13st_select_lex+0xeb)[0x55d5f1702f8b]
      mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x14d)[0x55d5f17038fd]
      mysqld(+0x5814f1)[0x55d5f16a44f1]
      mysqld(_Z21mysql_execute_commandP3THD+0x5fb0)[0x55d5f16b1210]
      mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x20a)[0x55d5f16b354a]
      mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1c57)[0x55d5f16b5ec7]
      mysqld(_Z10do_commandP3THD+0x178)[0x55d5f16b6c88]
      mysqld(_Z24do_handle_one_connectionP7CONNECT+0x33e)[0x55d5f178999e]
      mysqld(handle_one_connection+0x3d)[0x55d5f1789a6d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76db)[0x7ffbc84c06db]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f)[0x7ffbc7ac288f]

      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7ffaf0011690): SELECT * FROM ARCHIV a JOIN POLOHY p ON a.ID_OBJ = p.ID_OBJ AND a.TIMEUNIT = p.TIMEUNIT WHERE a.timeevent = '2018-01-10 12:00:05'
      Connection ID (thread ID): 28
      Status: NOT_KILLED

      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on

      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      Writing a core file...
      Working directory at /var/lib/mysql
      Resource Limits:
      Limit Soft Limit Hard Limit Units
      Max cpu time unlimited unlimited seconds
      Max file size unlimited unlimited bytes
      Max data size unlimited unlimited bytes
      Max stack size 8388608 unlimited bytes
      Max core file size unlimited unlimited bytes
      Max resident set unlimited unlimited bytes
      Max processes unlimited unlimited processes
      Max open files 1048576 1048576 files
      Max locked memory 16777216 16777216 bytes
      Max address space unlimited unlimited bytes
      Max file locks unlimited unlimited locks
      Max pending signals 127145 127145 signals
      Max msgqueue size 819200 819200 bytes
      Max nice priority 0 0
      Max realtime priority 0 0
      Max realtime timeout unlimited unlimited us
      Core pattern: |/usr/share/apport/apport %p %s %c %d %P

      Attachments

        1. archback.sql
          35 kB
        2. archfront.sql
          3 kB
        3. buildandrun.sh
          0.5 kB
        4. crash.query2.sql
          0.1 kB
        5. crash.sh
          0.1 kB
        6. create.db.sh
          0.5 kB
        7. data.crash.5sec.tar.gz
          87 kB
        8. Dockerfile
          0.8 kB
        9. load.db.sh
          0.3 kB

        Activity

          People

            Kentoku Kentoku Shiba (Inactive)
            jan.kristek@nam.cz Jan Kristek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3d
                3d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.