MDEV-21884 MariaDB with Spider crashes on a query