spd_db_conn.cc
@@ -3051,6 +3051,11 @@ int spider_db_fetch_table(
     } else {
       if (result_list->current_row_num < result_list->quick_page_size)
       {
+        if (!current->first_position)
+        {
+          table->status = STATUS_NOT_FOUND;
+          DBUG_RETURN(HA_ERR_END_OF_FILE);
+        }
         row = current->first_position[result_list->current_row_num].row;
       } else {
         if ((error_num = spider_db_get_row_from_tmp_tbl(
@@ -3249,6 +3254,11 @@ int spider_db_fetch_key(
   } else {
     if (result_list->current_row_num < result_list->quick_page_size)
     {
+      if (!current->first_position)
+      {
+        table->status = STATUS_NOT_FOUND;
+        DBUG_RETURN(HA_ERR_END_OF_FILE);
+      }
       row = current->first_position[result_list->current_row_num].row;
     } else {
       if ((error_num = spider_db_get_row_from_tmp_tbl(
@@ -3359,6 +3369,11 @@ int spider_db_fetch_minimum_columns(
     {
       DBUG_PRINT("info", ("spider current=%p", current));
       DBUG_PRINT("info", ("spider first_position=%p", current->first_position));
+      if (!current->first_position)
+      {
+        table->status = STATUS_NOT_FOUND;
+        DBUG_RETURN(HA_ERR_END_OF_FILE);
+      }
       DBUG_PRINT("info", ("spider current_row_num=%lld", result_list->current_row_num));
       DBUG_PRINT("info", ("spider first_position[]=%p", &current->first_position[result_list->current_row_num]));
       row = current->first_position[result_list->current_row_num].row;
